--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "symfony/framework-bundle": "4.3.*",
         "symfony/mailer": "4.4.*",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/orm-pack": "*",
+        "symfony/orm-pack": "^1.0",
         "symfony/process": "4.3.*",
         "symfony/security-bundle": "4.3.*",
         "symfony/serializer-pack": "*",
@@ -35,7 +35,7 @@
         "phpstan/phpstan-symfony": "^0.11.6",
         "squizlabs/php_codesniffer": "^3.4",
         "symfony/debug-pack": "*",
-        "symfony/maker-bundle": "^1.0",
+        "symfony/maker-bundle": "^1.14",
         "symfony/phpunit-bridge": "4.3.*",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "^1.0",
