--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,9 @@
         "php": "^7.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^1.8",
         "phpmd/phpmd": "^2.6",
-        "sensio/framework-extra-bundle": "^5.1",
+        "sensio/framework-extra-bundle": "^5.5",
         "symfony/asset": "4.3.*",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
@@ -16,15 +17,15 @@
         "symfony/framework-bundle": "4.3.*",
         "symfony/mailer": "4.4.*",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/orm-pack": "*",
+        "symfony/orm-pack": "^1.0",
         "symfony/process": "4.3.*",
         "symfony/security-bundle": "4.3.*",
         "symfony/serializer-pack": "*",
         "symfony/translation": "4.3.*",
         "symfony/twig-bundle": "4.3.*",
-        "symfony/validator": "4.3.*",
+        "symfony/validator": "4.4.*",
         "symfony/web-link": "4.3.*",
-        "symfony/webpack-encore-bundle": "^1.5",
+        "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
@@ -35,7 +36,7 @@
         "phpstan/phpstan-symfony": "^0.11.6",
         "squizlabs/php_codesniffer": "^3.4",
         "symfony/debug-pack": "*",
-        "symfony/maker-bundle": "^1.0",
+        "symfony/maker-bundle": "^1.14",
         "symfony/phpunit-bridge": "4.3.*",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "^1.0",
