--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,10 @@
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "^1.0",
         "symfony/process": "4.3.*",
+        "symfony/property-access": "4.4.*",
         "symfony/security-bundle": "4.3.*",
-        "symfony/serializer-pack": "*",
+        "symfony/serializer": "4.4.*",
+        "symfony/serializer-pack": "^1.0",
         "symfony/translation": "4.3.*",
         "symfony/twig-bundle": "4.3.*",
         "symfony/validator": "4.4.*",
