--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,4 +1,5 @@
 framework:
+    validation: {enable_annotations: true }
     secret: '%env(APP_SECRET)%'
     #default_locale: en
     #csrf_protection: true
