--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,21 +1,17 @@
 security:
-    encoders:
-        App\Entity\User:
-            algorithm: auto
-
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
+        in_memory: { memory: ~ }
         # used to reload user from session & other features (e.g. switch_user)
-        app_user_provider:
-            entity:
-                class: App\Entity\User
-                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             anonymous: true
+
+                # where to redirect after logout
+                # target: app_any_route
 
             # activate different ways to authenticate
 
