--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,6 +9,13 @@ security:
             security: false
         main:
             anonymous: true
+            guard:
+                authenticators:
+                    - App\Security\LoginFormAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
 
                 # where to redirect after logout
                 # target: app_any_route
