Essai pour inclure le formulaire de contact dans la page d'acueil avec l'embarcation du ContatController mais sans succès..

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,4 +1,6 @@
 framework:
+    fragments: { path: /contact/_form }
+
     secret: '%env(APP_SECRET)%'
     #default_locale: en
     #csrf_protection: true
