--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "4.3.*",
         "twig/extensions": "^1.5",
-        "ext-intl": "*"
+        "ext-intl": "*",
+      "ext-json": "*"
     },
     "require-dev": {
         "phpro/grumphp": "^0.15.2",
