Generating dynamic barcode and insert it into PDF

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "symfony/yaml": "4.3.*",
         "twig/extensions": "^1.5",
         "ext-intl": "*",
-      "ext-json": "*"
+      "ext-json": "*",
+      "ext-gd": "*"
     },
     "require-dev": {
         "phpro/grumphp": "^0.15.2",
