--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "twig/extensions": "^1.5",
         "ext-intl": "*",
       "ext-json": "*",
-      "ext-gd": "*"
+      "ext-gd": "*",
+      "ext-soap": "*"
     },
     "require-dev": {
         "phpro/grumphp": "^0.15.2",
