Add way for send choice to send phone - Correction grump

--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,11 @@
         "ext-iconv": "*",
         "ext-intl": "*",
         "ext-json": "*",
+        "ext-soap": "*",
         "doctrine/annotations": "^1.8",
         "dompdf/dompdf": "^0.8.3",
         "phpmd/phpmd": "^2.6",
+        "roromix/spreadsheetbundle": "^1.0",
         "sensio/framework-extra-bundle": "^5.5",
         "specshaper/gdpr-bundle": "^2.1",
         "symfony/asset": "4.3.*",
@@ -33,11 +35,7 @@
         "symfony/web-link": "4.3.*",
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "4.3.*",
-        "twig/extensions": "^1.5",
-        "ext-intl": "*",
-        "ext-json": "*",
-        "ext-gd": "*",
-        "ext-soap": "*"
+        "twig/extensions": "^1.5"
     },
     "require-dev": {
         "phpro/grumphp": "^0.15.2",
