--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,13 +5,16 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
-    upload_directory: '%kernel.project_dir%/public/uploads/logos'
+    #upload_directory: '%kernel.project_dir%/public/uploads/logos'
 
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+
+        bind:
+            $uploadsPath: '%kernel.project_dir%/public/uploads/Logos'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
