--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
-    #upload_directory: '%kernel.project_dir%/public/uploads/logos'
+    encrypt_key: NpovLiDO7eClpKJ3dggDeyQFoevHI8GRzdqT0HiYBHE=
 
 services:
     # default configuration for services in *this* file
