--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,11 @@
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
+
+###> User files ###
+/public/uploads/BDC/
+/public/uploads/CI/
+/public/uploads/etiquettes/
+/public/uploads/signatures/
+
+###< User files ###
