--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@lottiefiles/lottie-player": "^0.5.1",
         "cookieconsent": "^3.1.1",
         "node-sass": "^4.13.0",
         "sass-loader": "^7.0.1"
